<resources>

    <string name="app_name">Project2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="somepic">some pic</string>
    <string name="infoBT">More Info</string>
    <string name="mainviewofPic">mainpic</string>
    <string name="picBT">picBT</string>
    <string name="titleofgame">Game in Progress</string>
    <string name="itemName">Item Name</string>
    <string name="itemdescription">Item Worth</string>
    <string name="takepic">Take Picture</string>
    <string name="points">Points</string>
    <string name="uploadpic">Upload</string>
    <string name="moreinfo">More Info</string>
    <string name="space">-</string>
    <string name="flag">Flag</string>
    <string name="createnewgame">Create New Game</string>
    <string name="exit">Exit</string>
    <string name="gameinprogress">Game in Progress</string>
    <string name="profilename">Profile Name</string>
    <string name="newgame">New Game</string>
    <string name="entername">Enter Item Name</string>
    <string name="enterpoints">Enter Points</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="newgametitle">Game Title</string>
    <string name="entergametitle">Enter Game Title</string>
    <string name="invitefriend">Invite Friend</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="totalscore">Total Score:</string>
    <string name="gamestarted">Game Started:</string>
    <string name="friendprogress">Friends Progress</string>
    <string name="zero">0</string>
    <string name="slash">/</string>

</resources>