<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profilename"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/createnewgame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newgame"
        android:text="@string/createnewgame" />

    <Button
        android:id="@+id/gameinprogress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="inprogress"
        android:text="@string/gameinprogress" />

    <Button
        android:id="@+id/exitBTp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="exit1"
        android:text="@string/exit" />

</LinearLayout>